Class3_HelloWrold_program_of_java.txt
Write a HelloWrold program by using Java: 
	=========================================
	
	1. compose and saving a java program with .java ext
	2. compilating .java file and create .class file
	3. running .class file
	
	1. Compose and saving :  if we want to compose any java program we need one editor like : 
	     notepad, notepad++, eclipes, STS, RSA, RAD, IntelliJ, visual studio etc . like this there lot of edittors in the market  to support java program developments.
     
	     here : notepad : is default editor which will come as part of OS instalation , so we dont need,  any adiitonal software instalation. 
		 
		 but remaining editors like : notepad++, eclipse, STS, RSA, RAD, IntelliJ etc  these are third party editors , if we want to use these edittors we need to install these editors seperatly. 
			 
	first we will start with notepad: 
	-> lets open  the notepad:
	    win + R -> type notepad -> press enter key.
		it will open the editor with white background :
		 then start composing our java HelloWrold program using class key word. 
		 
		  class HelloWorld{
 
			 public static void main(String args[]){

			  System.out.println("Hello world this is my first java program at K7iT");
			 }

		  }
		  
		  save the program with HelloWorld.java ; here .java is extendion type for java programs. 
		   save under: D:\lab\5th-batch\dev\src
		                                    ----
		                                      -> HelloWorld.java
											  
			// { -> open brase 
			// [ -> open bracket 
			// ( -> open parentheses 
			// } -> open brase 
			// ] -> close Bracket
			// ) -> close parentheses
			
   2. compilation : if we want compile java program we need 2 things
                    1. command prompt
                    2. javac cmd 

   by usning javac cmd we can compile our java programs. this javac cmd will verify all rules and standards of 
   our program either we are following as same as java required standards. if we are not following proper rules then it will give the errors. 
   
				syntax: javac  .java file name with extention
	 
				exmaple: javac HelloWorld.java
	 
	 if we want to compile our program we should compile from where our .java files are saved.
	     i.e D:\lab\5th-batch\dev\src> 
											  
		 let open command prompt from our system 
		 
		    press win + R -> type cmd -> press enter key  - then it will open the command prompt with black color 
			background. by default it will loads current user location but we need to compile from our java file 
			locations 
			
			C:\Users\Dell>cd D:\lab\202401_JavaBatch\src

			C:\Users\Dell>D:

			D:\lab\202401_JavaBatch\src>javac HelloWorld.java

			D:\lab\202401_JavaBatch\src>javac HelloWorld.java

			D:\lab\202401_JavaBatch\src>
			
			D:\lab\202401_JavaBatch\src>javac HelloWorld.java
			HelloWorld.java:3: error: ';' expected
				 System.out.println("HelloWorld... Good morning to everyone this is my first java program")
																										   ^
			1 error

			D:\lab\202401_JavaBatch\src>javac HelloWorld.java
			HelloWorld.java:4: error: reached end of file while parsing
			   }
				^
			1 error

			D:\lab\202401_JavaBatch\src>javac HelloWorld.java
			HelloWorld.java:2: error: ',', ')', or '[' expected
				public static void main(String args[]{
													 ^
			HelloWorld.java:3: error: ';' expected
				 System.out.println("HelloWorld... Good morning to everyone this is my first java program")
																										   ^
			2 errors

			D:\lab\202401_JavaBatch\src>javac HelloWorld.java

			D:\lab\202401_JavaBatch\src>
			
			here we get the next line without any error message means our program is compiled successfull . 
			
			how to confirm our program is compiled successfull or  not?
			
			go to our .java file location i.e D:\lab\202401_JavaBatch\src> and see there will be one more file got created with the same of our class name  with .class extention. 
			
			input (*.java)  -> javac -> *.class (output)
			
			javac cmd will convert our .java file into a .class file.
			here .java file is also called  source code or high level code or user understand code. 
			     .class file is called as   byete code or intermediate code 
				 
	   3. running program: if we want to run the java program we need 2 things  
	               one is cmd prompt  
				   second one  is java cmd .
		   
		     let open the cmd prompt 
			  press win + R -> type cmd -> press enter key  - then it will open the command prompt with black color 
			background. by default it will loads current user location but we need to run from our .class file 
			locations 
			
			  syntax: java .class file name without extention
			   exm:   java HelloWorld
			   
			    C:\Users\Dell>D:

				D:\>cd D:\lab\202401_JavaBatch\src

				D:\lab\202401_JavaBatch\src>java HelloWorld
				HelloWorld... Good morning to everyone this is my first java program

				D:\lab\202401_JavaBatch\src>
				
							
				
		source code (.java): its user understandable code, or high level code or java
		      its writing in english
        byte code (.class): byte code or intermediate code
             it will be in alphanumeric and some special chars		
		binary code: its is low level code or system understandable code.